--- a/article.ipynb
+++ b/article.ipynb
@@ -3,10 +3,9 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "citation-manager": {
-     "citations": {
-      "": []
-     }
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
     },
     "tags": [
      "title"
@@ -159,6 +158,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
     "tags": [
      "hermeneutics"
     ]
@@ -170,6 +173,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "editable": true,
     "jdh": {
      "module": "object",
      "object": {
@@ -177,6 +181,9 @@
        "table 1: label table 1"
       ]
      }
+    },
+    "slideshow": {
+     "slide_type": ""
     },
     "tags": [
      "table-1"
@@ -201,7 +208,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Check your Python version\n",
@@ -214,7 +227,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# pandas package needs to be added to the requirements.txt 's file \n",
@@ -224,7 +243,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -573,7 +598,7 @@
    "items": {}
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -587,7 +612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.11.9"
   },
   "toc": {
    "base_numbering": 1,
